--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "core-decorators": "^0.20.0",
     "craco-alias": "^3.0.1",
     "customize-cra": "^1.0.0",
@@ -84,7 +86,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "postcss": "^8.4.14",
+    "postcss-preset-env": "^7.6.0",
     "prettier": "^2.6.2",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "react-is": "^18.1.0",
+    "tailwindcss": "^3.0.24",
+    "twin.macro": "^2.8.2"
   }
 }
